# WOOFIDOGS

./: .gitignore  .vercelignore  README.md  index.html  package-lock.json  package.json  vercel.json
woofi-frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
woofi-frontend/src/app/: globals.css  layout.tsx  page.tsx
woofi-frontend/src/app/about/: page.tsx
woofi-frontend/src/app/admin/: page.tsx
woofi-frontend/src/app/dogs/: page.tsx
woofi-frontend/src/app/donations/: page.tsx
woofi-frontend/src/components/: DogCard.tsx  Footer.tsx  Header.tsx  Layout.tsx
woofi-frontend/src/context/: WalletContextProvider.tsx
woofi-frontend/src/idl/: woofi.json
woofi-frontend/src/types/: index.ts
woofi-frontend/src/utils/: program.ts
woofi_program/: Anchor.toml
woofi_program/app/program_client/: pda.ts  rpc.ts
woofi_program/programs/woofi/: Cargo.toml
woofi_program/programs/woofi/src/: error.rs  lib.rs
woofi_program/programs/woofi/src/instructions/: add_dog.rs  donate.rs  initialize_platform.rs  mod.rs  update_dog.rs  withdraw_funds.rs
woofi_program/programs/woofi/src/state/: dog.rs  donation.rs  mod.rs  platform.rs
woofi_program/programs/woofi/tests/: add_dog.rs  donate.rs  initialize_platform.rs  update_dog.rs  withdraw_funds.rs
woofi_program/programs/woofi/tests/common/: mod.rs
woofi_program/tests/: woofi.ts
