[package]
name = "woofi"
version = "0.1.0"
description = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "woofi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"

bumpalo = "=3.14.0"

 
[dev-dependencies]
solana-sdk = "1.18.26"
solana-program-test = "1.18.26"
